--- a/clienteOld/index.html
+++ b/clienteOld/index.html
@@ -6,17 +6,10 @@
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=VT323&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-  <div class="container mt-2 p-1 w-50 text-center">
-    <img src="./img/cascos.png" alt=""><span class="fs-2 text-light ms-2 titulo-mastermind">Masterpodcasts</span>
-  </div>
-    <div class="container mt-2 p-5 w-50 bg-mastermind-50 border-5 border-danger rounded-4">
-        <form id="login">
+    <div class="container mt-5">
+        <form class="wx-50" id="login">
             <div class="form-group">
               <label for="username">Username</label>
               <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Introduzca username" name="username">
@@ -25,7 +18,7 @@
               <label for="password">Password</label>
               <input type="password" class="form-control" id="password" placeholder="Password" name="password">
             </div>
-            <button type="submit" class="btn btn-danger mt-5">Login</button>
+            <button type="submit" class="btn btn-primary mt-5">Login</button>
           </form>
     </div>
     <script src="./js/app.js"></script>
