--- a/cliente/index.html
+++ b/cliente/index.html
@@ -3,31 +3,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Principal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
-<body>
-  <div class="container mt-2 p-1 w-50 text-center">
-    <img src="./img/cascos.png" alt=""><span class="fs-2 text-light ms-2 titulo-mastermind">Masterpodcasts</span>
-  </div>
-    <div class="container mt-2 p-5 w-50 bg-mastermind-50 border-5 border-danger rounded-4">
-        <form id="login">
-            <div class="form-group">
-              <label for="username">Username</label>
-              <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Introduzca username" name="username">
-            </div>
-            <div class="form-group mt-5">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" id="password" placeholder="Password" name="password">
-            </div>
-            <button type="submit" class="btn btn-danger mt-5">Login</button>
-          </form>
+<body class="bg-light-subtle ">
+  <nav class="navbar navbar-expand-lg fixed-top border-bottom border-4 border-danger">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="./img/logo.png" alt="">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active fw-bold fs-4 text-light" aria-current="page" href="#">Principal</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fs-4 text-light" aria-current="page" href="#">Podcasts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fs-4 text-light" aria-current="page" href="#">Autores</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <script src="./js/app.js"></script>
-    </body>
+  </nav>
+  <div class="container-fluid text-center" id="contenido-principal">
+    <div class="row">
+      <div class="text-start col-2 bg-light-subtle pt-3" id="columna-lateral-izqda">
+        <div class="d-flex flex-column fw-bold text-uppercase">
+          Categorias
+          <div class="btn-group-vertical pt-3" role="group" aria-label="Vertical radio toggle button group" id="categorias-selectores">
+          </div>
+        </div>
+      </div>
+      <div class="col-10 contenido border-danger">
+        <div class="pt-3" id="contenido-central">
+          <!-- CARD PODCAST -->
+          <div class="card border-bottom border-5 border-danger" style="width: 18rem;">
+            <img src="./img/podcast_paco.png" class="card-img-top py-2" alt="Podcast Paco">
+            <div class="card-body">
+              <h5 class="card-title">Podcast Paco</h5>
+              <p class="card-text">Primer capitulo de los podcast del Podcast con P de Paco
+                  <span class="badge text-bg-danger ms-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-btn" viewBox="0 0 16 16">
+                    <path d="M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814z"/>
+                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
+                  </svg>
+                  </span>
+              </p>
+            </div>
+          </div>
+          <!-- CARD PODCAST -->
+          <!-- CARD PODCAST -->
+          <div class="card border-bottom border-5 border-danger" style="width: 18rem;">
+            <img src="./img/podcast_paco.png" class="card-img-top py-2" alt="Podcast Paco">
+            <div class="card-body">
+              <h5 class="card-title">Podcast Paco</h5>
+              <p class="card-text">Primer capitulo de los podcast del Podcast con P de Paco
+                  <span class="badge text-bg-danger ms-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-btn" viewBox="0 0 16 16">
+                    <path d="M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814z"/>
+                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
+                  </svg>
+                  </span>
+              </p>
+            </div>
+          </div>
+          <!-- CARD PODCAST -->
+          <!-- CARD PODCAST -->
+          <div class="card border-bottom border-5 border-danger" style="width: 18rem;">
+            <img src="./img/podcast_paco.png" class="card-img-top py-2" alt="Podcast Paco">
+            <div class="card-body">
+              <h5 class="card-title">Podcast Paco</h5>
+              <p class="card-text">Primer capitulo de los podcast del Podcast con P de Paco
+                  <span class="badge text-bg-danger ms-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-btn" viewBox="0 0 16 16">
+                    <path d="M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814z"/>
+                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
+                  </svg>
+                  </span>
+              </p>
+            </div>
+          </div>
+          <!-- CARD PODCAST -->
+          <div class="card border-bottom border-5 border-danger" style="width: 18rem;">
+            <img src="./img/podcast_paco.png" class="card-img-top py-2" alt="Podcast Paco">
+            <div class="card-body">
+              <h5 class="card-title">Podcast Paco</h5>
+              <p class="card-text">Primer capitulo de los podcast del Podcast con P de Paco
+                  <span class="badge text-bg-danger ms-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-btn" viewBox="0 0 16 16">
+                    <path d="M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814z"/>
+                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
+                  </svg>
+                  </span>
+              </p>
+            </div>
+          </div>
+          <!-- CARD PODCAST -->
+          <!-- CARD PODCAST -->
+          <div class="card border-bottom border-5 border-danger" style="width: 18rem;">
+            <img src="./img/podcast_paco.png" class="card-img-top py-2" alt="Podcast Paco">
+            <div class="card-body">
+              <h5 class="card-title">Podcast Paco</h5>
+              <p class="card-text">Primer capitulo de los podcast del Podcast con P de Paco
+                  <span class="badge text-bg-danger ms-3">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-btn" viewBox="0 0 16 16">
+                    <path d="M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814z"/>
+                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
+                  </svg>
+                  </span>
+              </p>
+            </div>
+          </div>
+          <!-- CARD PODCAST -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="./js/app.js"></script>
+  </body>
 </html>
